--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -16,6 +16,23 @@
 .mb10 {
     margin-bottom: 10px;
 }
+// color
+.color-primary {
+    color: $uni-color-primary;
+}
+.color-error {
+    color: $uni-color-error;
+}
+.color-warning {
+    color: $uni-color-warning;
+}
+.color-success {
+    color: $uni-color-success;
+}
+// flex
+.flex {
+    display: flex;
+}
 .flex-1 {
     flex: 1;
 }
