【增加】商品列表

--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -20,6 +20,9 @@
 .color-primary {
     color: $uni-color-primary;
 }
+.color-grey {
+    color: $uni-text-color-grey;
+}
 .color-error {
     color: $uni-color-error;
 }
